--- a/dpdc_openstef/templates/base.html
+++ b/dpdc_openstef/templates/base.html
@@ -267,14 +267,15 @@
                             <i class="bi bi-gear-fill"></i> Train Model
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- Forecast page disabled -->
+                    <!-- <li class="nav-item">
                         <a class="nav-link {% if active_page == 'forecast' %}active{% endif %}" href="/forecast">
                             <i class="bi bi-graph-up-arrow"></i> Forecast
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link {% if active_page == 'forecast-multiple' %}active{% endif %}" href="/forecast-multiple">
-                            <i class="bi bi-bar-chart-line"></i> Forecast Multiple
+                            <i class="bi bi-bar-chart-line"></i> Forecast
                         </a>
                     </li>
                     <li class="nav-item">
@@ -310,6 +311,9 @@
     
     <!-- Select2 -->
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    
+    <!-- Common utilities -->
+    <script src="/static/js/common.js"></script>
     
     {% block extra_js %}{% endblock %}
 </body>
