--- a/dpdc_openstef/templates/forecast_multiple.html
+++ b/dpdc_openstef/templates/forecast_multiple.html
@@ -88,7 +88,7 @@
                     <!-- Submit Button -->
                     <div class="d-grid gap-2">
                         <button type="submit" class="btn btn-primary" id="forecastBtn">
-                            <i class="bi bi-lightning-charge"></i> Generate Forecasts
+                            <i class="bi bi-lightning-charge"></i> Backtest Models
                         </button>
                     </div>
                 </form>
@@ -225,14 +225,14 @@ $(document).ready(function() {
             displayForecastResults(data);
             
             $forecastBtn.prop('disabled', false);
-            $forecastBtn.html('<i class="bi bi-lightning-charge"></i> Generate Forecasts');
+            $forecastBtn.html('<i class="bi bi-lightning-charge"></i> Backtest Models');
         })
         .catch(error => {
             console.error('Error:', error);
             showAlert('Failed to generate forecasts.', 'danger');
             
             $forecastBtn.prop('disabled', false);
-            $forecastBtn.html('<i class="bi bi-lightning-charge"></i> Generate Forecasts');
+            $forecastBtn.html('<i class="bi bi-lightning-charge"></i> Backtest Models');
         });
     });
 
