notes added for data in backetesting and forecast page, should be removed later

--- a/dpdc_openstef/templates/backtesting.html
+++ b/dpdc_openstef/templates/backtesting.html
@@ -16,6 +16,10 @@
 <h1 class="page-title">
     <i class="bi bi-arrow-counterclockwise"></i> Backtest Multiple Models
 </h1>
+<!-- TODO: this should be removed before final deployment -->
+<h6>2023-01-01 to 2025-09-29: Actual load data <br>
+    2025-09-30 to Present: Randomly generated data for testing puspose
+</h6>
 
 <div class="row justify-content-center">
     <div class="col-xl-6 col-lg-5">
