--- a/dpdc_openstef/templates/forecast_multiple.html
+++ b/dpdc_openstef/templates/forecast_multiple.html
@@ -16,6 +16,10 @@
 <h1 class="page-title">
     <i class="bi bi-graph-up-arrow"></i> Forecast Multiple Models
 </h1>
+<!-- TODO: this should be removed before final deployment -->
+<h6>2023-01-01 to 2025-09-29: Actual load data <br>
+    2025-09-30 to Present: Randomly generated data for testing puspose
+</h6>
 
 <div class="row justify-content-center">
     <!-- Form Section -->
